Fix bouncer component on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -19,18 +19,24 @@
 @layer base {
   body {
     @apply mb-20;
-    cursor:
-      url("data:image/svg+xml,%3Csvg fill='%23558660' width='50px' height='50px' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.8 10a2.2 2.2 0 0 0 4.4 0 2.2 2.2 0 0 0-4.4 0z'/%3E%3C/svg%3E")
-        25 25,
-      default;
   }
 
-  a,
-  button {
-    cursor:
-      url("data:image/svg+xml,%3Csvg fill='%238EB997' width='70px' height='70px' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.8 10a2.2 2.2 0 0 0 4.4 0 2.2 2.2 0 0 0-4.4 0z'/%3E%3C/svg%3E")
-        35 35,
-      pointer;
+  @media screen and (min-width: 991px) {
+    body {
+      @apply mb-20;
+      cursor:
+        url("data:image/svg+xml,%3Csvg fill='%23558660' width='50px' height='50px' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.8 10a2.2 2.2 0 0 0 4.4 0 2.2 2.2 0 0 0-4.4 0z'/%3E%3C/svg%3E")
+          25 25,
+        default;
+    }
+
+    a,
+    button {
+      cursor:
+        url("data:image/svg+xml,%3Csvg fill='%238EB997' width='70px' height='70px' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.8 10a2.2 2.2 0 0 0 4.4 0 2.2 2.2 0 0 0-4.4 0z'/%3E%3C/svg%3E")
+          35 35,
+        pointer;
+    }
   }
 
   .glitch {
